<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.example.gdgfinder.add.AddGdgViewModel" />
    </data>
    
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".add.AddGdgFragment">

            <TextView
                android:id="@+id/textViewIntro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/add_gdg"
                android:text="@string/add_gdg"
                android:layout_marginStart="@dimen/spacing_normal"
                android:layout_marginEnd="@dimen/spacing_normal"
                android:layout_marginTop="@dimen/spacing_normal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="411dp"
                android:layout_height="230dp"
                tools:src="@tools:sample/avatars"
                android:contentDescription="@string/stage_image_description"
                app:srcCompat="@drawable/behind"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="2dp"
                android:scaleType="centerCrop"
                app:layout_constraintTop_toBottomOf="@id/textViewIntro"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@id/editTextName"/>

            <EditText
                android:id="@+id/editTextName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/your_name_label"
                android:layout_marginTop="8dp"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:layout_marginBottom="4dp"
                app:layout_constraintTop_toBottomOf="@id/imageView"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@id/editTextMail"
                android:singleLine="true"/>

            <EditText
                android:id="@+id/editTextMail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email_label"
                android:layout_marginTop="4dp"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:layout_marginBottom="4dp"
                app:layout_constraintTop_toBottomOf="@id/editTextName"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@id/editTextCity"
                android:singleLine="true"/>

            <EditText
                android:id="@+id/editTextCity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/city_label"
                android:layout_marginTop="4dp"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:layout_marginBottom="4dp"
                app:layout_constraintTop_toBottomOf="@id/editTextMail"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@id/editTextCountry"
                android:singleLine="true"/>

            <EditText
                android:id="@+id/editTextCountry"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/country_label"
                android:layout_marginTop="4dp"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:layout_marginBottom="4dp"
                app:layout_constraintTop_toBottomOf="@id/editTextCity"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@id/editTextRegion"
                android:singleLine="true"/>

            <EditText
                android:id="@+id/editTextRegion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/region_label"
                android:layout_marginTop="4dp"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:layout_marginBottom="4dp"
                app:layout_constraintTop_toBottomOf="@id/editTextCountry"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@id/contentGroup"
                android:singleLine="true"/>

            <LinearLayout
                android:id="@+id/contentGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:focusable="true"
                android:orientation="vertical"
                android:layout_marginTop="@dimen/spacing_normal"
                android:layout_marginBottom="8dp"
                app:layout_constraintTop_toBottomOf="@id/editTextRegion"
                app:layout_constraintStart_toStartOf="@id/editTextRegion"
                app:layout_constraintEnd_toEndOf="@id/editTextRegion"
                app:layout_constraintBottom_toTopOf="@id/button">

                <TextView
                    android:id="@+id/labelTextWhy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/motivation"
                    android:text="@string/motivation"
                    app:layout_constraintTop_toBottomOf="@id/editTextRegion"
                    app:layout_constraintBottom_toTopOf="@id/editTextWhy"
                    app:layout_constraintStart_toStartOf="parent"/>

                <EditText
                    android:id="@+id/editTextWhy"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/enter_motivation"
                    android:inputType="textMultiLine"
                    android:ems="10"
                    app:layout_constraintTop_toBottomOf="@id/editTextRegion"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toTopOf="@id/button"/>


            </LinearLayout>

            <Button
                android:id="@+id/button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/submit"
                android:contentDescription="@string/submit_button_description"
                android:layout_marginBottom="12dp"
                android:layout_marginEnd="40dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/contentGroup"
                android:onClick="@{() -> viewModel.onSubmitApplication()}"
                android:accessibilityLiveRegion="polite"/>



        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
</layout>